<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context="com.malikfoundation.purworejodisasterreporter.PelaporanBencana">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foto"
            android:id="@+id/txtView1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ambil_foto"
            android:id="@+id/btnFoto"
            android:layout_below="@id/txtView1"
            android:layout_marginBottom="5dp"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imgPrev"
            android:contentDescription="@string/descThumbnail"
            android:layout_below="@id/btnFoto"
            android:layout_marginBottom="5dp"
            android:background="#000000"
            android:visibility="gone"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnHapusImg"
            android:text="@string/hapus"
            android:layout_below="@id/imgPrev"
            android:layout_marginBottom="5dp"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtViewDropdown"
            android:text="@string/nama"
            android:layout_below="@+id/btnHapusImg"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dropdown"
            android:layout_below="@+id/txtViewDropdown"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi"
            android:id="@+id/txtView2"
            android:layout_below="@+id/dropdown"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:inputType="textMultiLine"
            android:id="@+id/txtDeskripsi"
            android:layout_below="@id/txtView2"
            android:layout_marginBottom="5dp"
            android:hint="@string/deskripsi"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtViewLevel"
            android:text="@string/level"
            android:layout_below="@+id/txtDeskripsi"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup"
            android:layout_below="@+id/txtViewLevel"
            android:layout_marginBottom="5dp">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioTinggi"
                android:text="@string/tinggi"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#575757"
                android:checked="true" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioSedang"
                android:text="@string/sedang"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#575757" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioRendah"
                android:text="@string/rendah"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#575757" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lokasi"
            android:id="@+id/txtView3"
            android:layout_below="@+id/radioGroup"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:id="@+id/txtLat"
            android:layout_below="@id/txtView3"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#575757"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:id="@+id/txtLon"
            android:layout_below="@id/txtLat"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:textColor="#575757" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtView4"
            android:layout_below="@+id/txtLon"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/nomor"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtNomor"
            android:layout_below="@id/txtView4"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:text="Small Text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#575757"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kirim"
            android:id="@+id/btnKirim"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/txtNomor"
            android:layout_marginTop="5dp"/>
    </RelativeLayout>
</ScrollView>