<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    tools:context="com.malikfoundation.purworejodisasterreporter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin">
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:id="@+id/img"
                    android:contentDescription="@string/descThumbnail"/>

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBar"
                    android:layout_centerInParent="true"/>
        </RelativeLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:id="@+id/bencana"
                android:textColor="#ff000000"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level"
                android:id="@+id/level"
                android:textColor="#ff000000"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:id="@+id/latitude"
                android:textColor="#ff000000"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:id="@+id/longitude"
                android:textColor="#ff000000"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Small Text"
                android:id="@+id/deskripsi"
                android:textColor="#575757"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:maxLines="2"
                android:maxLength="50"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Small Text"
        android:id="@+id/datetime"
        android:textColor="#FF8000"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="italic"/>

</LinearLayout>
